@@ -76,6 +76,8 @@ const int DEFAULT_LAUNCHER_SIZE = 64;
 const int MINIMUM_DESKTOP_HEIGHT = 800;
 const int GNOME_SETTINGS_CHANGED_WAIT_SECONDS = 1;
 const double DEFAULT_DPI = 96.0f;
+const double DPI_SCALING_LIMIT = 140.0f;
+const int DPI_SCALING_STEP = 8;
 }
 
 //
@@ -322,6 +324,34 @@ public:
     return em_converters_[monitor];
   }
 
+  int FindOptimalScale(const UScreen* uscreen, const int monitor)
+  {
+    auto const& geo = uscreen->GetMonitorGeometry(monitor);
+    auto const& size = uscreen->GetMonitorPhysicalSize(monitor);
+    auto scale = DPI_SCALING_STEP;
+      
+    if ((size.width == 160 && size.height == 90) ||
+        (size.width == 160 && size.height == 100) ||
+        (size.width == 16 && size.height == 9) ||
+        (size.width == 16 && size.height == 10))
+    {
+      return scale;
+    }
+
+    if (size.width > 0 && size.height > 0)
+    {
+      const double dpi_x = static_cast<double>(geo.width) / (size.width / 25.4);  
+      const double dpi_y = static_cast<double>(geo.height) / (size.height / 25.4);
+
+      const auto dpi = std::max(dpi_x, dpi_y);
+
+      if (dpi > DPI_SCALING_LIMIT)
+        scale = static_cast<int>(std::lround(scale * dpi / DPI_SCALING_LIMIT));
+    }
+
+    return scale;
+  }
+
   void UpdateDPI()
   {
     auto* uscreen = UScreen::GetDefault();
@@ -331,6 +361,10 @@ public:
 
     glib::Variant dict;
     g_settings_get(ubuntu_ui_settings_, SCALE_FACTOR.c_str(), "@a{si}", &dict);
+
+    bool dict_changed = false;
+    GVariantBuilder builder;
+    g_variant_builder_init(&builder, G_VARIANT_TYPE("a{si}"));
 
     glib::String app_target_monitor(g_settings_get_string(ui_settings_, APP_SCALE_MONITOR.c_str()));
     double app_target_scale = 0;
@@ -345,8 +379,18 @@ public:
         double ui_scale = 1.0f;
         int value;
 
-        if (g_variant_lookup(dict, monitor_name.c_str(), "i", &value) && value > 0)
-          ui_scale = static_cast<double>(value)/8.0f;
+        if (g_variant_lookup(dict, monitor_name.c_str(), "i", &value))
+        {
+          if (value > 0)
+            ui_scale = static_cast<double>(value)/DPI_SCALING_STEP;
+        }
+        else 
+        {
+          value = FindOptimalScale(uscreen, monitor);
+          ui_scale = static_cast<double>(value)/DPI_SCALING_STEP;
+          dict_changed = true;
+        }
+        g_variant_builder_add(&builder, "{si}", monitor_name.c_str(), value);
 
         if (app_target_monitor.Str() == monitor_name)
           app_target_scale = ui_scale;
@@ -358,6 +402,12 @@ public:
 
       if (em_converters_[monitor]->SetDPI(dpi))
         any_changed = true;
+    }
+
+    glib::Variant new_dict(g_variant_builder_end(&builder));
+    if (dict_changed)
+    {
+      g_settings_set_value(ubuntu_ui_settings_, SCALE_FACTOR.c_str(), new_dict);
     }
 
     if (app_target_scale == 0)
