@@ -36,6 +36,10 @@ unity (7.4.0+16.04.20160906-0ubuntu2) UNRELEASED; urgency=medium
     #1622995)
   * UnityScreen: toggle gestures recognition on lock (LP: #1645507)
 
+  [ Kai-Heng Feng ]
+  * UnitySettings: If scale-factor is not set, find and set right scale
+    for HiDPI displays.
+
  -- Marco Trevisan (Treviño) <mail@3v1n0.net>  Tue, 04 Jul 2017 18:12:47 +0200
 
 unity (7.4.0+16.04.20160906-0ubuntu1) xenial; urgency=medium
